Playing with software

--- a/index.html
+++ b/index.html
@@ -2,3 +2,5 @@
 <h1> This is my first page with GitHub Pages </h1>
 <p>Thanks GitHub!</p>
 </html>
+
+Wondering if this will show up on the other side...
